add js in burger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1341,13 +1341,16 @@ a:active {
 	.header__navigation {
 		display: none;
 	}
-	.active {
-		position: fixed;
+	._active {
+		position: block;
 
 		left: 0;
 		top: 0;
 		right: 0;
 		bottom: 0;
+
+		width: 100%;
+		height: 100vh;
 
 		z-index: 1;
 
