--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,8 +71,8 @@ body {
 
 img {
 	display: block;
-	margin: 0 auto;
-	/* max-width: 100%; */
+
+	max-width: 100%;
 }
 
 .header {
@@ -110,13 +110,13 @@ img {
 }
 
 .menu__item + .menu__item {
-	margin-left: 2rem;
+	margin-left: 32px;
 	/* 33px */
 }
 
 .menu__link {
-	/* font-size: 1rem; */
-	font-size: calc(10px + 6 * (100vw / 1920));
+	font-size: 1rem;
+	/* font-size: calc(10px + 6 * (100vw / 1920)); */
 	/* 16px */
 	line-height: 2.5em;
 	/* 40px */
@@ -137,7 +137,7 @@ img {
 .header__personal {
 	position: relative;
 
-	margin-right: 8.4rem;
+	margin-right: 134px;
 	/* 134px */
 }
 
@@ -163,7 +163,7 @@ img {
 }
 
 .personal__item + .personal__item {
-	margin-left: 2.8rem;
+	margin-left: 45px;
 }
 
 .personal__link--cart {
@@ -222,7 +222,7 @@ img {
 }
 
 .social__item + .social__item {
-	margin-left: 0.5rem;
+	margin-left: 8px;
 }
 
 .header__logo {
@@ -254,7 +254,6 @@ img {
 
 .title {
 	font-size: 3.125rem;
-
 	/* 50px */
 	line-height: 0.8em;
 	font-weight: 800;
@@ -332,7 +331,7 @@ img {
 .smoothies__title {
 	text-align: center;
 
-	margin-bottom: 2.5rem;
+	margin-bottom: 40px;
 	/* 40px */
 }
 
@@ -341,11 +340,11 @@ img {
 }
 
 .smoothies__text {
-	max-width: 58rem;
+	max-width: 915px;
 
 	text-align: center;
 
-	margin: 0 auto 2.5rem;
+	margin: 0 auto 40px;
 }
 
 .text {
@@ -376,12 +375,15 @@ img {
 	display: flex;
 	justify-content: flex-end;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
 	width: 25%;
 	height: 195px;
 
 	background-color: #fff;
 
-	padding: 1.8rem 0 2.5rem;
+	padding: 28px 0 40px;
 }
 
 .cards__item:nth-child(-n + 8) {
@@ -405,7 +407,7 @@ img {
 	color: #f2612d;
 	text-align: center;
 
-	margin-top: 1.7rem;
+	margin-top: 27px;
 }
 
 /* smoothies */
@@ -426,7 +428,7 @@ img {
 
 	background-color: #158371;
 
-	padding-left: 8.9rem;
+	padding-left: 142px;
 }
 
 .about__img {
@@ -444,16 +446,16 @@ img {
 	display: flex;
 	flex-direction: column;
 
-	margin-left: 14.2rem;
+	margin-left: 142px;
 }
 
 .about__title {
-	max-width: 17rem;
+	max-width: 670px;
 
-	margin-bottom: 5.5rem;
-	margin-top: 8rem;
+	margin-bottom: 55px;
+	margin-top: 80px;
 
-	font-size: 5.5rem;
+	font-size: 3.4rem;
 	line-height: 1.1em;
 }
 
@@ -475,22 +477,22 @@ img {
 	top: 60px;
 	left: -5px;
 
-	width: 45rem;
-	height: 1.3rem;
+	width: 450px;
+	height: 13px;
 }
 
 .about__list {
 	list-style-image: url(../images/li.png);
 
-	margin-bottom: 3.2rem;
-	padding-left: 3rem;
+	margin-bottom: 32px;
+	padding-left: 30px;
 }
 
 .about__item {
-	font-size: 2.1rem;
+	font-size: 1.3rem;
 	line-height: 1.05em;
 
-	margin-bottom: 2.2rem;
+	margin-bottom: 22px;
 }
 
 .about__item--bold {
@@ -498,7 +500,7 @@ img {
 }
 
 .about__btn {
-	font-size: 2.1rem;
+	font-size: 1.3rem;
 	line-height: 1.05em;
 
 	position: relative;
@@ -506,7 +508,7 @@ img {
 	width: 382px;
 	height: 63px;
 
-	padding: 0 9rem 0 2.2rem;
+	padding: 0 90px 0 22px;
 
 	border-radius: 30px;
 	-webkit-border-radius: 30px;
@@ -564,6 +566,8 @@ img {
 
 	width: 480px;
 	height: 720px;
+
+	padding-top: 130px;
 }
 
 .products__item--brown {
@@ -583,28 +587,31 @@ img {
 }
 
 .product__img {
-	margin-top: 129px;
+	margin-top: 130px;
 	margin-bottom: 25px;
 }
 
 .products__label {
-	font-size: 24px;
-	line-height: 22px;
+	font-size: 1.5rem;
+	/* 24px */
+	line-height: 1.1em;
 	font-weight: 700;
 
 	margin-bottom: 5px;
 }
 
 .products__subtitle {
-	font-size: 21px;
-	line-height: 32px;
+	font-size: 1.3rem;
+	/* 21px */
+	line-height: 1.5em;
 
 	margin-bottom: 60px;
 }
 
 .products__btn {
-	font-size: 21px;
-	line-height: 22px;
+	font-size: 1.3rem;
+	/* 21px */
+	line-height: 1.05em;
 
 	width: 207px;
 	height: 63px;
@@ -676,8 +683,9 @@ img {
 	width: 304px;
 	height: 63px;
 
-	font-size: 21px;
-	line-height: 22px;
+	font-size: 1.3rem;
+	/* 21px */
+	line-height: 1.05em;
 
 	border: none;
 	border-radius: 30px;
@@ -777,8 +785,8 @@ img {
 
 	opacity: 0.6;
 
-	font-size: 200px;
-	line-height: 40px;
+	font-size: 12.5rem;
+	line-height: 0.2em;
 	font-weight: 800;
 	letter-spacing: -0.02em;
 	color: #521905;
@@ -803,7 +811,7 @@ img {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 59px;
+	gap: 60px;
 
 	max-width: 740px;
 
@@ -820,15 +828,16 @@ img {
 }
 
 .testimonials__quote {
-	font-size: 18px;
-	line-height: 35px;
+	font-size: 1.1rem;
+	/* 18px */
+	line-height: 1.9em;
 	text-align: center;
 
 	z-index: 1;
 }
 
 .testimonials__cite {
-	line-height: 45px;
+	line-height: 2.5em;
 	font-weight: 600;
 	font-style: italic;
 	text-align: center;
@@ -843,7 +852,7 @@ img {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 98px;
+	gap: 100px;
 
 	max-width: 160px;
 
@@ -905,7 +914,7 @@ img {
 }
 
 .blog__text-box {
-	padding: 223px 30px 45px;
+	padding: 225px 30px 45px;
 
 	position: relative;
 }
@@ -915,7 +924,7 @@ img {
 
 	content: "";
 
-	width: 687px;
+	width: 685px;
 	height: 12px;
 
 	background-color: #f7ae3b;
@@ -931,8 +940,9 @@ img {
 }
 
 .blog__subtitle {
-	font-size: 30px;
-	line-height: 40px;
+	font-size: 1.9rem;
+	/* 30px */
+	line-height: 1.3em;
 	font-weight: 800;
 	letter-spacing: -0.02em;
 	color: #f2612d;
@@ -941,8 +951,9 @@ img {
 }
 
 .blog__time {
-	font-size: 16px;
-	line-height: 35px;
+	font-size: 1rem;
+	/* 16px */
+	line-height: 2.2em;
 	color: #1e1e1e;
 
 	margin-left: 30px;
@@ -965,7 +976,7 @@ img {
 	display: block;
 
 	bottom: 15px;
-	right: 143px;
+	right: 145px;
 
 	width: 18px;
 	height: 10px;
@@ -1003,7 +1014,8 @@ img {
 }
 
 .instagram__title {
-	font-size: 24px;
+	font-size: 1.5rem;
+	/* 24px */
 	text-align: center;
 
 	position: relative;
@@ -1119,7 +1131,7 @@ img {
 }
 
 .info__link {
-	font-size: 18px;
+	font-size: 1.1rem;
 	line-height: 35px;
 	font-weight: 700;
 	letter-spacing: -0.02em;
@@ -1166,14 +1178,14 @@ img {
 	background: no-repeat center/cover url("../images/email.png");
 
 	top: 22px;
-	left: 23px;
+	left: 22px;
 }
 
 .footer__input {
 	padding-left: 50px;
 
 	width: 498px;
-	height: 63px;
+	height: 62px;
 
 	background-color: #fff;
 
@@ -1187,8 +1199,9 @@ img {
 }
 
 .footer__input::placeholder {
-	font-size: 17px;
-	line-height: 35px;
+	font-size: 1.05rem;
+	/* 17px */
+	line-height: 2.05em;
 	font-weight: 700;
 	letter-spacing: -0.02em;
 	color: #6d450c;
@@ -1198,11 +1211,11 @@ img {
 	display: flex;
 	align-items: center;
 
-	margin-left: 187px;
+	margin-left: 186px;
 }
 
 .footer__text {
-	line-height: 40px;
+	line-height: 2.5rem;
 	font-weight: 800;
 	text-transform: uppercase;
 	letter-spacing: -0.02em;
@@ -1223,7 +1236,7 @@ img {
 	background: no-repeat center/cover url("../images/arrow_footer.png");
 
 	width: 48px;
-	height: 43px;
+	height: 42px;
 
 	bottom: 7px;
 	left: -70px;
@@ -1250,8 +1263,9 @@ img {
 }
 
 .footer__small {
-	font-size: 13px;
-	line-height: 35px;
+	font-size: 0.8rem;
+	/* 13px */
+	line-height: 2.7em;
 	letter-spacing: 0.02em;
 	color: #af8a82;
 	text-align: center;
@@ -1261,7 +1275,7 @@ img {
 	background-color: #f2662f;
 
 	width: 53px;
-	height: 53px;
+	height: 55px;
 
 	position: fixed;
 
@@ -1272,7 +1286,7 @@ img {
 
 	background-image: url(../images/arrow__up.png);
 	background-repeat: no-repeat;
-	background-size: 13px 25px;
+	background-size: 14px 25px;
 	background-position: center;
 
 	border-radius: 5px;
@@ -1287,8 +1301,9 @@ img {
 
 	content: "Go top";
 
-	font-size: 16px;
-	line-height: 40px;
+	font-size: 1rem;
+	/* 16px */
+	line-height: 2.5em;
 	font-weight: 700;
 	letter-spacing: -0.02em;
 
