--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,39 +140,29 @@ img {
 }
 .menu__link:hover {
 	color: #223499;
-	transform: scaleX(2);
-	-webkit-transform: scaleX(2);
-	-moz-transform: scaleX(2);
-	-ms-transform: scaleX(2);
-	-o-transform: scaleX(2);
+	transform: scale(1.3);
+	-webkit-transform: scale(1.3);
+	-moz-transform: scale(1.3);
+	-ms-transform: scale(1.3);
+	-o-transform: scale(1.3);
 }
-.menu__link::before {
+.menu__link::after {
 	content: "";
-	width: 100%;
-	height: 1px;
-	background-color: #223499;
+	width: 0;
+	height: 2px;
 	position: absolute;
+	top: 22px;
 	left: 0;
-	bottom: -5px;
-	transform-origin: left;
-	transform: scaleX(0);
-	-webkit-transform: scaleX(0);
-	-moz-transform: scaleX(0);
-	-ms-transform: scaleX(0);
-	-o-transform: scaleX(0);
+	background-color: #223499;
+	display: block;
 }
-.menu__link:hover::before {
-	transition: all 0.25s;
-	transform-origin: right;
-	transform: scaleX(1);
-	-webkit-transform: scaleX(1);
-	-moz-transform: scaleX(1);
-	-ms-transform: scaleX(1);
-	-o-transform: scaleX(1);
-	-webkit-transition: all 0.25s;
-	-moz-transition: all 0.25s;
-	-ms-transition: all 0.25s;
-	-o-transition: all 0.25s;
+.menu__link:hover::after {
+	transition: all 0.5s;
+	width: 100%;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-ms-transition: all 0.5s;
+	-o-transition: all 0.5s;
 }
 .header__right-block {
 	display: flex;
@@ -209,7 +199,13 @@ img {
 	display: flex;
 	align-items: center;
 }
-
+.personal__item:hover {
+	transform: scale(1.3);
+	-webkit-transform: scale(1.3);
+	-moz-transform: scale(1.3);
+	-ms-transform: scale(1.3);
+	-o-transform: scale(1.3);
+}
 .personal__item + .personal__item {
 	margin-left: 45px;
 }
@@ -268,6 +264,24 @@ img {
 	-ms-border-radius: 50%;
 	-o-border-radius: 50%;
 }
+.social__item:hover {
+	transform: scale(1.3);
+	-webkit-transform: scale(1.3);
+	-moz-transform: scale(1.3);
+	-ms-transform: scale(1.3);
+	-o-transform: scale(1.3);
+}
+/* 
+.social__link {
+	position: relative;
+}
+
+.social__link:first-child {
+	content: "facebook";
+	position: absolute;
+	top: 0;
+	left: 0;
+} */
 
 .social__item + .social__item {
 	margin-left: 8px;
