--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,18 @@ img {
 	margin-left: 32px;
 	/* 33px */
 }
-
+.menu__item:hover {
+	transition: all 0.5s ease-in-out;
+	transform: scale(1.3);
+	-webkit-transform: scale(1.3);
+	-moz-transform: scale(1.3);
+	-ms-transform: scale(1.3);
+	-o-transform: scale(1.3);
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-ms-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+}
 .menu__link {
 	font-size: 1rem;
 	/* font-size: calc(10px + 6 * (100vw / 1920)); */
@@ -138,14 +149,7 @@ img {
 	/* 0.32px */
 	position: relative;
 }
-.menu__link:hover {
-	color: #223499;
-	transform: scale(1.3);
-	-webkit-transform: scale(1.3);
-	-moz-transform: scale(1.3);
-	-ms-transform: scale(1.3);
-	-o-transform: scale(1.3);
-}
+
 .menu__link::after {
 	content: "";
 	width: 0;
@@ -153,7 +157,7 @@ img {
 	position: absolute;
 	top: 22px;
 	left: 0;
-	background-color: #223499;
+	background-color: #fff;
 	display: block;
 }
 .menu__link:hover::after {
@@ -163,6 +167,9 @@ img {
 	-moz-transition: all 0.5s;
 	-ms-transition: all 0.5s;
 	-o-transition: all 0.5s;
+}
+.menu__link:active {
+	color: #223499;
 }
 .header__right-block {
 	display: flex;
@@ -271,17 +278,6 @@ img {
 	-ms-transform: scale(1.3);
 	-o-transform: scale(1.3);
 }
-/* 
-.social__link {
-	position: relative;
-}
-
-.social__link:first-child {
-	content: "facebook";
-	position: absolute;
-	top: 0;
-	left: 0;
-} */
 
 .social__item + .social__item {
 	margin-left: 8px;
@@ -475,7 +471,18 @@ img {
 .cards__item:last-child {
 	border-right: none;
 }
-
+.cards__icon:hover {
+	transition: all 0.5s ease-in-out;
+	transform: scale(1.3);
+	-webkit-transform: scale(1.3);
+	-moz-transform: scale(1.3);
+	-ms-transform: scale(1.3);
+	-o-transform: scale(1.3);
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-ms-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+}
 .cards__desc {
 	font-size: 1.5625rem;
 	line-height: 1.6em;
@@ -511,7 +518,6 @@ img {
 .about__img {
 	width: 691px;
 	height: 818px;
-
 	transform: translateY(64px);
 	-webkit-transform: translateY(64px);
 	-moz-transform: translateY(64px);
@@ -601,7 +607,7 @@ img {
 
 	display: block;
 
-	top: 25px;
+	top: 22px;
 	left: 305px;
 
 	width: 30px;
@@ -666,7 +672,18 @@ img {
 .products__img {
 	margin-bottom: 25px;
 }
-
+.products__img:hover {
+	transition: 0.5s ease;
+	transform: scale(1.15);
+	-webkit-transform: scale(1.15);
+	-moz-transform: scale(1.15);
+	-ms-transform: scale(1.15);
+	-o-transform: scale(1.15);
+	-webkit-transition: 0.5s ease;
+	-moz-transition: 0.5s ease;
+	-ms-transition: 0.5s ease;
+	-o-transition: 0.5s ease;
+}
 .products__label {
 	font-size: 1.5rem;
 	/* 24px */
@@ -737,77 +754,53 @@ img {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 	margin: 120px auto 152px;
-
 	max-width: 1320px;
 }
-
 .story__box {
 	padding-left: 17px;
 }
-
 .story__title {
 	margin-bottom: 43px;
 }
-
 .story__text {
 	margin-bottom: 45px;
 }
-
 .story__btn {
 	width: 304px;
 	height: 63px;
-
-	font-size: 1.3rem;
-	/* 21px */
-	line-height: 1.05em;
-
+	font-size: 21px;
+	line-height: 22px;
 	border: none;
 	border-radius: 30px;
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
 	-ms-border-radius: 30px;
 	-o-border-radius: 30px;
-
 	padding: 0px 145px 0 25px;
-
 	position: relative;
 }
-
 .story__btn::before {
 	content: "";
-
 	position: absolute;
-
 	top: 20px;
 	left: 225px;
-
 	width: 30px;
 	height: 16px;
-
 	background: no-repeat center/cover url("../images/arrow.png");
 }
-
 .story__content {
 	margin-left: 200px;
-
 	position: relative;
 }
-
 .story__content::after {
 	content: "";
-
 	position: absolute;
-
 	display: block;
-
 	top: 23px;
 	left: -167px;
-
 	width: 290px;
 	height: 216px;
-
 	background: no-repeat center/cover url("../images/stamp.png");
 }
 
@@ -837,7 +830,7 @@ img {
 	display: block;
 
 	top: -85px;
-	right: 40px;
+	right: 55px;
 
 	width: 410px;
 	height: 301px;
@@ -951,6 +944,7 @@ img {
 }
 
 .testimonials__btn-right {
+	display: block;
 	width: 30px;
 	height: 16px;
 
@@ -1123,8 +1117,8 @@ img {
 	width: 26px;
 	height: 26px;
 
-	top: 10px;
-	left: -42px;
+	top: 0;
+	left: -40px;
 }
 
 .instagram__link {
@@ -1199,7 +1193,7 @@ img {
 .footer__title {
 	font-size: 26px;
 
-	margin-bottom: 18px;
+	margin-bottom: 35px;
 }
 
 .info__list {
@@ -1221,12 +1215,14 @@ img {
 .payment__box {
 	display: flex;
 	justify-content: space-between;
-	gap: 18px;
+
 	flex-wrap: wrap;
 
 	max-width: 270px;
 }
-
+.payment__img + .payment__img {
+	margin-left: 18px;
+}
 .payment__img {
 	height: 100%;
 }
