--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ img {
 	margin-left: 32px;
 	/* 33px */
 }
+
 .menu__item:hover {
 	transition: all 0.5s ease-in-out;
 	transform: scale(1.3);
@@ -137,6 +138,7 @@ img {
 	-ms-transition: all 0.5s ease-in-out;
 	-o-transition: all 0.5s ease-in-out;
 }
+
 .menu__link {
 	font-size: 1rem;
 	/* font-size: calc(10px + 6 * (100vw / 1920)); */
@@ -160,6 +162,7 @@ img {
 	background-color: #fff;
 	display: block;
 }
+
 .menu__link:hover::after {
 	transition: all 0.5s;
 	width: 100%;
@@ -168,9 +171,11 @@ img {
 	-ms-transition: all 0.5s;
 	-o-transition: all 0.5s;
 }
+
 .menu__link:active {
 	color: #223499;
 }
+
 .header__right-block {
 	display: flex;
 	justify-content: space-between;
@@ -206,6 +211,7 @@ img {
 	display: flex;
 	align-items: center;
 }
+
 .personal__item:hover {
 	transform: scale(1.3);
 	-webkit-transform: scale(1.3);
@@ -213,6 +219,7 @@ img {
 	-ms-transform: scale(1.3);
 	-o-transform: scale(1.3);
 }
+
 .personal__item + .personal__item {
 	margin-left: 45px;
 }
@@ -271,6 +278,7 @@ img {
 	-ms-border-radius: 50%;
 	-o-border-radius: 50%;
 }
+
 .social__item:hover {
 	transform: scale(1.3);
 	-webkit-transform: scale(1.3);
@@ -309,10 +317,12 @@ img {
 	justify-content: center;
 	align-items: center;
 }
+
 /* parallax */
 .header__title:hover {
 	mix-blend-mode: difference;
 }
+
 .title {
 	font-size: 3.125rem;
 	/* 50px */
@@ -354,6 +364,7 @@ img {
 
 	background: no-repeat center/cover url("../images/arrow.png");
 }
+
 .btn:hover::before {
 	transform: translateX(10px);
 	transition: 0.4s ease-in-out;
@@ -366,6 +377,7 @@ img {
 	-ms-transform: translateX(10px);
 	-o-transform: translateX(10px);
 }
+
 .header__burger-img {
 	width: 40px;
 }
@@ -386,10 +398,13 @@ img {
 /* header */
 @media only screen and (max-width: 1440px) {
 }
+
 @media only screen and (max-width: 992px) {
 }
+
 @media only screen and (max-width: 768px) {
 }
+
 @media only screen and (max-width: 320px) {
 }
 
@@ -471,6 +486,7 @@ img {
 .cards__item:last-child {
 	border-right: none;
 }
+
 .cards__icon:hover {
 	transition: all 0.5s ease-in-out;
 	transform: scale(1.3);
@@ -483,6 +499,7 @@ img {
 	-ms-transition: all 0.5s ease-in-out;
 	-o-transition: all 0.5s ease-in-out;
 }
+
 .cards__desc {
 	font-size: 1.5625rem;
 	line-height: 1.6em;
@@ -497,10 +514,13 @@ img {
 /* smoothies */
 @media only screen and (max-width: 1440px) {
 }
+
 @media only screen and (max-width: 992px) {
 }
+
 @media only screen and (max-width: 768px) {
 }
+
 @media only screen and (max-width: 320px) {
 }
 
@@ -623,10 +643,13 @@ img {
 /* about */
 @media only screen and (max-width: 1440px) {
 }
+
 @media only screen and (max-width: 992px) {
 }
+
 @media only screen and (max-width: 768px) {
 }
+
 @media only screen and (max-width: 320px) {
 }
 
@@ -672,6 +695,7 @@ img {
 .products__img {
 	margin-bottom: 25px;
 }
+
 .products__img:hover {
 	transition: 0.5s ease;
 	transform: scale(1.15);
@@ -684,6 +708,7 @@ img {
 	-ms-transition: 0.5s ease;
 	-o-transition: 0.5s ease;
 }
+
 .products__label {
 	font-size: 1.5rem;
 	/* 24px */
@@ -741,10 +766,13 @@ img {
 /* products */
 @media only screen and (max-width: 1440px) {
 }
+
 @media only screen and (max-width: 992px) {
 }
+
 @media only screen and (max-width: 768px) {
 }
+
 @media only screen and (max-width: 320px) {
 }
 
@@ -757,15 +785,23 @@ img {
 	margin: 120px auto 152px;
 	max-width: 1320px;
 }
+
 .story__box {
 	padding-left: 17px;
 }
+
+.story__image {
+	max-width: 585px;
+}
+
 .story__title {
 	margin-bottom: 43px;
 }
+
 .story__text {
 	margin-bottom: 45px;
 }
+
 .story__btn {
 	width: 304px;
 	height: 63px;
@@ -780,6 +816,7 @@ img {
 	padding: 0px 145px 0 25px;
 	position: relative;
 }
+
 .story__btn::before {
 	content: "";
 	position: absolute;
@@ -789,10 +826,12 @@ img {
 	height: 16px;
 	background: no-repeat center/cover url("../images/arrow.png");
 }
+
 .story__content {
 	margin-left: 200px;
 	position: relative;
 }
+
 .story__content::after {
 	content: "";
 	position: absolute;
@@ -807,10 +846,13 @@ img {
 /* story */
 @media only screen and (max-width: 1440px) {
 }
+
 @media only screen and (max-width: 992px) {
 }
+
 @media only screen and (max-width: 768px) {
 }
+
 @media only screen and (max-width: 320px) {
 }
 
@@ -954,10 +996,13 @@ img {
 /* testimonials */
 @media only screen and (max-width: 1440px) {
 }
+
 @media only screen and (max-width: 992px) {
 }
+
 @media only screen and (max-width: 768px) {
 }
+
 @media only screen and (max-width: 320px) {
 }
 
@@ -1065,10 +1110,13 @@ img {
 /* blog */
 @media only screen and (max-width: 1440px) {
 }
+
 @media only screen and (max-width: 992px) {
 }
+
 @media only screen and (max-width: 768px) {
 }
+
 @media only screen and (max-width: 320px) {
 }
 
@@ -1128,13 +1176,16 @@ img {
 
 .instagram__inner {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	align-items: center;
 }
 
 .instagram__picture {
 	position: relative;
 	background-repeat: no-repeat;
 	background-size: cover;
+	flex-basis: 50;
+	flex: 1 1 20%;
 }
 
 .instagram__picture::before {
@@ -1160,13 +1211,17 @@ img {
 
 	object-fit: contain;
 }
+
 /* instagram */
 @media only screen and (max-width: 1440px) {
 }
+
 @media only screen and (max-width: 992px) {
 }
+
 @media only screen and (max-width: 768px) {
 }
+
 @media only screen and (max-width: 320px) {
 }
 
@@ -1214,15 +1269,18 @@ img {
 
 .payment__box {
 	display: flex;
-	justify-content: space-between;
-
+	justify-content: flex-start;
+	align-items: center;
 	flex-wrap: wrap;
 
-	max-width: 270px;
+	width: 270px;
 }
-.payment__img + .payment__img {
-	margin-left: 18px;
+
+.payment__img {
+	margin-right: 18px;
+	margin-bottom: 20px;
 }
+
 .payment__img {
 	height: 100%;
 }
