--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -538,13 +538,24 @@ img {
 .about__img {
 	width: 691px;
 	height: 818px;
+	transition: 0.5s ease-in-out;
 	transform: translateY(64px);
 	-webkit-transform: translateY(64px);
 	-moz-transform: translateY(64px);
 	-ms-transform: translateY(64px);
 	-o-transform: translateY(64px);
+	-webkit-transition: 0.5s ease-in-out;
+	-moz-transition: 0.5s ease-in-out;
+	-ms-transition: 0.5s ease-in-out;
+	-o-transition: 0.5s ease-in-out;
 }
-
+.about__img:hover {
+	transform: scale(1.1) rotate(-15deg);
+	-webkit-transform: scale(1.1) rotate(-15deg);
+	-moz-transform: scale(1.1) rotate(-15deg);
+	-ms-transform: scale(1.1) rotate(-15deg);
+	-o-transform: scale(1.1) rotate(-15deg);
+}
 .about__wrapper {
 	display: flex;
 	flex-direction: column;
