--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ img {
 	display: flex;
 }
 
-.menu__item + .menu__item {
+.menu__item+.menu__item {
 	margin-left: 32px;
 	/* 33px */
 }
@@ -220,7 +220,7 @@ img {
 	-o-transform: scale(1.3);
 }
 
-.personal__item + .personal__item {
+.personal__item+.personal__item {
 	margin-left: 45px;
 }
 
@@ -287,7 +287,7 @@ img {
 	-o-transform: scale(1.3);
 }
 
-.social__item + .social__item {
+.social__item+.social__item {
 	margin-left: 8px;
 }
 
@@ -304,9 +304,7 @@ img {
 
 .header__burger-btn {
 	display: none;
-	position: fixed;
-	top: 18px;
-	right: 2px;
+	
 	z-index: 1;
 	cursor: pointer;
 }
@@ -396,17 +394,158 @@ img {
 }
 
 /* header */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
 @media only screen and (max-width: 768px) {
+	.header__top {
+		margin-bottom: 11.875rem;
+	}
+
+	.header__navigation {
+		display: none;
+	}
+
+	.header__burger-line {
+		background-color: #2d30f2;
+
+		width: 35px;
+		height: 2px;
+
+		position: fixed;
+		top: 40px;
+		right: 45px;
+		display: block;
+
+
+	}
+
+	.header__burger-line::after {
+		content: '';
+
+		background-color: #472c92;
+
+		display: block;
+
+		position: absolute;
+		bottom: 10px;
+		left: 0;
+
+		width: 40px;
+		height: 2px;
+	}
+
+	.header__burger-line::before {
+		content: '';
+
+		background-color: #472c92;
+
+		display: block;
+
+		position: absolute;
+		top: 10px;
+		left: 0;
+
+		width: 30px;
+		height: 2px;
+	}
+
+	._active {
+		position: block;
+		overflow: auto;
+
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+
+		width: 100%;
+		height: 100vh;
+
+		z-index: 1;
+
+		background-color: #12c37c;
+
+		display: flex;
+		flex-direction: column-reverse;
+		justify-content: flex-end;
+		align-items: center;
+	}
+
+	.menu__list {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+
+		height: 50rem;
+		*/
+		/* 500px */
+	}
+
+	.menu__item+.menu__item {
+		margin-left: 0;
+	}
+
+	.menu__link {
+		font-size: 2rem;
+		*/
+		/* 20px */
+	}
+
+	.header__right-block {
+		margin: 10rem 0 15rem;
+	}
+
+	.header__logo {
+		display: block;
+		top: 120%;
+	}
+
+	/* .logo__img {
+		width: 250px;
+	} */
+
+	.header__burger-btn {
+		display: block;
+	}
+
+	.smoothies {
+		padding: 6rem 0 5rem;
+	}
+
+	.smoothies__title {
+		margin-bottom: 2.3rem;
+	}
+
+	.title {
+		font-size: 3.2rem;
+	}
+
+	.smoothies__text {
+		max-width: 60rem;
+		margin-bottom: 2.5rem;
+	}
+
+	.text {
+		font-size: 1.2rem;
+	}
+
+	.smoothies__cards {
+		grid-template-columns: repeat(2, 50%);
+		grid-template-rows: repeat(4, 25%);
+		max-width: 40rem;
+	}
+
+	.cards__desc {
+		font-size: 2rem;
+
+		margin-bottom: 2.3rem;
+	}
 }
 
-@media only screen and (max-width: 320px) {
-}
+
+@media only screen and (max-width: 320px) {}
 
 /* smoothies */
 
@@ -512,17 +651,13 @@ img {
 }
 
 /* smoothies */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* about */
 .about {
@@ -549,6 +684,7 @@ img {
 	-ms-transition: 0.5s ease-in-out;
 	-o-transition: 0.5s ease-in-out;
 }
+
 .about__img:hover {
 	transform: scale(1.1) rotate(-15deg);
 	-webkit-transform: scale(1.1) rotate(-15deg);
@@ -556,6 +692,7 @@ img {
 	-ms-transform: scale(1.1) rotate(-15deg);
 	-o-transform: scale(1.1) rotate(-15deg);
 }
+
 .about__wrapper {
 	display: flex;
 	flex-direction: column;
@@ -652,17 +789,13 @@ img {
 }
 
 /* about */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* product */
 
@@ -775,17 +908,13 @@ img {
 }
 
 /* products */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* story */
 
@@ -855,17 +984,13 @@ img {
 }
 
 /* story */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* testimonials */
 
@@ -1005,17 +1130,13 @@ img {
 }
 
 /* testimonials */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* blog */
 
@@ -1110,17 +1231,13 @@ img {
 }
 
 /* blog */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* instagram */
 .instagram {
@@ -1215,17 +1332,13 @@ img {
 }
 
 /* instagram */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* footer */
 .footer__top {
