--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,8 +356,10 @@ img {
 
 .header__btn {
 	font-size: 1.5rem;
-	/*24px*/line-height: 2.5em;
-	/*40px*/letter-spacing: -0.02em;
+	/*24px*/
+	line-height: 2.5em;
+	/*40px*/
+	letter-spacing: -0.02em;
 	text-transform: capitalize;
 	border-radius: 2.1875rem;
 	/* 35px */
@@ -385,7 +387,7 @@ img {
 	/* 210px */
 
 	width: 1.875rem;
-	30px
+	/* 30px */
 	height: 1rem;
 	/* 16px */
 
@@ -717,8 +719,8 @@ img {
 	.smoothies__title {
 		text-align: center;
 	
-		margin-bottom: 2.5rem;
-		/* 40px */
+		margin-bottom: 2.375rem;
+		/* 38px */
 	}
 	
 	.title--orange {
@@ -726,8 +728,8 @@ img {
 	}
 	
 	.smoothies__text {
-		max-width: 57.1875rem;
-		/* 915px */
+		max-width: 43.75rem;
+		/* 700px */
 	
 		text-align: center;
 	
